--- a/styles.css
+++ b/styles.css
@@ -227,7 +227,7 @@ input[type=submit] {
   box-shadow: 0 9px #79bdb2;
   font-family: Spoof-Thin;
   position: relative;
-  margin-left: 661px ;
+  margin-left: 42% ;
 }
 
 input[type=submit]:hover {
